PROJECT(TheWetness CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

# Gettings all sources
file(GLOB_RECURSE WETNESS_SOURCES TheWetness/*.cpp)
file(GLOB_RECURSE WETNESS_HEADERS TheWetness/*.hpp)

file(GLOB_RECURSE ASCII_SOURCES ASCIIEngine/*.cpp)
file(GLOB_RECURSE ASCII_HEADERS ASCIIEngine/*.hpp)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/Header)

ADD_EXECUTABLE(ASCIITest
	ASCIITest.cpp)

ADD_EXECUTABLE(TheWetness
	TheWetness.cpp
	${WETNESS_SOURCES} 
	${WETNESS_HEADERS} 
	${ASCII_SOURCES} 
	${ASCII_HEADERS})